--- a/index.html
+++ b/index.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="master.css">
+    <link rel="stylesheet" href="master.css" />
     <title>Industrious</title>
   </head>
   <body>
     <div class="menu-barra">
       <div class="industrious"></div>
       <div class="menu-bar">
-          <p>Industrious <span>Menu</span></p>
-          <div class="menu-hide">
-              
-          </div>
+        <p>Industrious <span>Menu</span></p>
+        <div class="menu-hide"></div>
       </div>
     </div>
     <div class="hero-image">
@@ -28,22 +26,28 @@
       </div>
     </div>
 
-    <div class="image-background">
+    <div class="s1">
       <!-- Photo by langshoots on Unsplash -->
-    </div>
-
-    <div class="box1">
-      <div class="">
-        <h2>Sem turpis amet semper</h2>
-        <p>
-          n arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim
-          aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan
-          erat tempus amet porttitor.
-        </p>
+      <div class="sub-title">
+        <div class="text-sub-title">
+          <h2>Sem turpis amet semper</h2>
+          <p>
+            n arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim
+            aliquet. Accumsan ac integer lobortis commodo ornare aliquet
+            accumsan erat tempus amet porttitor.
+          </p>
+        </div>
       </div>
       <div class="card-box">
-        <div class=""></div>
+        <div class="card1 box"></div>
+        <div class="card2 box"></div>
+        <div class="card3 box"></div>
+        <div class="card4 box"></div>
+        <div class="card5 box"></div>
+        <div class="card6 box"></div>
       </div>
     </div>
+
+    <div class="footer"></div>
   </body>
 </html>
