terminado imagem background

--- a/index.html
+++ b/index.html
@@ -47,7 +47,36 @@
         <div class="card6 box"></div>
       </div>
     </div>
+    <div class="middle-s1">
+      <div class="text-middle">
+        <h2>Curabitur ullamcorper ultricies</h2>
+        <p>
+          Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio
+          porttitor sem non mi integer non faucibus ornare mi ut ante amet
+          placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan
+          varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum
+          ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis
+          iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed
+          amet praesent. Nunc lacinia ante nunc ac grav
+        </p>
+      </div>
+    </div>
 
+    <div class="end-s1">
+      <div class="text-sub-title">
+        <h2>Faucibus consequat lorem</h2>
+        <p>
+          In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim
+          aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan
+          erat tempus amet porttitor.
+        </p>
+      </div>
+      <div class="card-box">
+        <div class="card7 box"></div>
+        <div class="card8 box"></div>
+        <div class="card box"></div>
+      </div>
+    </div>
     <div class="footer"></div>
   </body>
 </html>
