--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="menu-hide"></div>
       </div>
     </div>
+
     <div class="hero-image">
       <!-- Photo by Pedro Lastra on Unsplash -->
       <div class="hero-text">
@@ -47,6 +48,7 @@
         <div class="card6 box"></div>
       </div>
     </div>
+
     <div class="middle-s1">
       <div class="text-middle">
         <h2>Curabitur ullamcorper ultricies</h2>
@@ -77,6 +79,52 @@
         <div class="card box"></div>
       </div>
     </div>
-    <div class="footer"></div>
+
+    <div class="footer">
+      <div class="menu-barra">
+        <div class="industrious"></div>
+        <div class="menu-bar">
+          <p>Industrious <span>Menu</span></p>
+          <div class="menu-hide"></div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="left-footer">
+          <h2>Accumsan montes viverra</h2>
+          <p>
+            Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio
+            porttitor sem non mi integer non faucibus ornare mi ut ante amet
+            placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan
+            varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum
+            ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis
+            iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed
+            amet praesent. Nunc lacinia ante nunc ac gravida.
+          </p>
+        </div>
+  
+        <div class="middle-footer">
+          <h3>Sem turpis amet semper</h3>
+          <ul>
+            <li>
+              <a href="">Dolor pulvinar sed etiam.</a>
+            </li>
+            <li>
+              <a href="">Etiam vel lorem sed amet.</a>
+            </li>
+            <li>
+              <a href="">Felis enim feugiat viverra.</a>
+            </li>
+            <li>
+              <a href="">Dolor pulvinar magna etiam.</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="right-footer">
+
+        </div>
+      </div>
+    </div>
   </body>
 </html>
