iserido uma segunda imagem

--- a/index.html
+++ b/index.html
@@ -104,26 +104,45 @@
         </div>
   
         <div class="middle-footer">
+          <!-- Photo by Paul Fiedler on Unsplash -->
           <h3>Sem turpis amet semper</h3>
           <ul>
             <li>
               <a href="">Dolor pulvinar sed etiam.</a>
+              <hr>
             </li>
             <li>
               <a href="">Etiam vel lorem sed amet.</a>
+              <hr>
             </li>
             <li>
               <a href="">Felis enim feugiat viverra.</a>
+              <hr>
             </li>
             <li>
               <a href="">Dolor pulvinar magna etiam.</a>
+              <hr>
             </li>
           </ul>
         </div>
 
         <div class="right-footer">
-
+          <h3>Magna sed ipsum</h3>
+          <ul>
+            <li>Twitter</li>
+            <li>Facebook</li>
+            <li>Instagram</li>
+            <li>Github</li>
+          </ul>
         </div>
+      </div>
+
+      <div class="line-end">
+        <hr>
+      </div>
+
+      <div class="copyright-footer">
+        <p><small>© Untitled. Photos Unsplash, Video Coverr. </small></p>
       </div>
     </div>
   </body>
