Terminado menu tag

--- a/index.html
+++ b/index.html
@@ -5,14 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="master.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+    />
     <title>Industrious</title>
   </head>
   <body>
     <div class="menu-barra">
-      <div class="industrious"></div>
+      <!-- <div class="industrious"></div> -->
       <div class="menu-bar">
-        <p>Industrious <span>Menu</span></p>
-        <div class="menu-hide"></div>
+        <p class="menu-right">Industrious</p>
+        <p class="menu-left"><i class="fas fa-bars"></i><span>Menu</span></p>
+        <div class="menu-hide">
+          <div>X</div>
+          >
+          <div class="hide-text">
+            <ul>
+              <li>Home</li>
+              <hr />
+              <li>Elements</li>
+              <hr />
+              <li>Generic</li>
+              <hr />
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -81,14 +99,6 @@
     </div>
 
     <div class="footer">
-      <div class="menu-barra">
-        <div class="industrious"></div>
-        <div class="menu-bar">
-          <p>Industrious <span>Menu</span></p>
-          <div class="menu-hide"></div>
-        </div>
-      </div>
-
       <div class="container">
         <div class="left-footer">
           <h2>Accumsan montes viverra</h2>
@@ -96,32 +106,33 @@
             Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio
             porttitor sem non mi integer non faucibus ornare mi ut ante amet
             placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan
-            varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum
-            ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis
-            iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed
-            amet praesent. Nunc lacinia ante nunc ac gravida.
+            varius montes viverra nibh in adipiscing. Lorem ipsum dolor
+            vestibulum ante ipsum primis in faucibus vestibulum. Blandit
+            adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu
+            faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac
+            gravida.
           </p>
         </div>
-  
+
         <div class="middle-footer">
           <!-- Photo by Paul Fiedler on Unsplash -->
           <h3>Sem turpis amet semper</h3>
           <ul>
             <li>
               <a href="">Dolor pulvinar sed etiam.</a>
-              <hr>
+              <hr />
             </li>
             <li>
               <a href="">Etiam vel lorem sed amet.</a>
-              <hr>
+              <hr />
             </li>
             <li>
               <a href="">Felis enim feugiat viverra.</a>
-              <hr>
+              <hr />
             </li>
             <li>
               <a href="">Dolor pulvinar magna etiam.</a>
-              <hr>
+              <hr />
             </li>
           </ul>
         </div>
@@ -138,7 +149,7 @@
       </div>
 
       <div class="line-end">
-        <hr>
+        <hr />
       </div>
 
       <div class="copyright-footer">
