terminado menu lateral

--- a/index.html
+++ b/index.html
@@ -17,19 +17,18 @@
       <div class="menu-bar">
         <p class="menu-right">Industrious</p>
         <p class="menu-left"><i class="fas fa-bars"></i><span>Menu</span></p>
-        <div class="menu-hide">
-          <div>X</div>
-          >
-          <div class="hide-text">
-            <ul>
-              <li>Home</li>
-              <hr />
-              <li>Elements</li>
-              <hr />
-              <li>Generic</li>
-              <hr />
-            </ul>
-          </div>
+      </div>
+      <div class="menu-hide">
+        <div class="left-hide">X</div>
+        <div class="hide-text">
+          <ul>
+            <li class="home"> <a href="">Home</a></li>
+            <hr />
+            <li class="element"> <a href="">Elements</a> </li>
+            <hr />
+            <li class="generic"> <a href="">Generic</a></li>
+            <hr />
+          </ul>
         </div>
       </div>
     </div>
