escondido o menu lateral e estilizado os primeiros cards

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <div class="left-hide">X</div>
         <div class="hide-text">
           <ul>
-            <li class="home"> <a href="">Home</a></li>
+            <li class="home"><a href="">Home</a></li>
             <hr />
-            <li class="element"> <a href="">Elements</a> </li>
+            <li class="element"><a href="">Elements</a></li>
             <hr />
-            <li class="generic"> <a href="">Generic</a></li>
+            <li class="generic"><a href="">Generic</a></li>
             <hr />
           </ul>
         </div>
@@ -56,13 +56,72 @@
           </p>
         </div>
       </div>
+
       <div class="card-box">
-        <div class="card1 box"></div>
-        <div class="card2 box"></div>
-        <div class="card3 box"></div>
-        <div class="card4 box"></div>
-        <div class="card5 box"></div>
-        <div class="card6 box"></div>
+        <div class="card1 box">
+          <div class="card-inner">
+            <p><i class="far fa-address-card"></i></p>
+            <h3>Feugiat consequat</h3>
+            <p>
+              Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing
+              gravida odio porttitor sem non mi integer non faucibus.
+            </p>
+          </div>
+        </div>
+
+        <div class="card2 box">
+          <div class="card-inner">
+            <p><i class="far fa-copy"></i></p>
+            <h3>Ante sem integer</h3>
+            <p>
+              Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing
+              gravida odio porttitor sem non mi integer non faucibus.
+            </p>
+          </div>
+        </div>
+
+        <div class="card3 box">
+          <div class="card-inner">
+            <p><i class="far fa-save"></i></p>
+            <h3>Ipsum consequat</h3>
+            <p>
+              Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing
+              gravida odio porttitor sem non mi integer non faucibus.
+            </p>
+          </div>
+        </div>
+
+        <div class="card4 box">
+          <div class="card-inner">
+            <p><i class="fas fa-chart-line"></i></p>
+            <h3>Interdum gravida</h3>
+            <p>
+              Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing
+              gravida odio porttitor sem non mi integer non faucibus.
+            </p>
+          </div>
+        </div>
+
+        <div class="card5 box">
+          <div class="card-inner">
+            <p><i class="far fa-paper-plane"></i></p>
+            <h3>Faucibus consequat</h3>
+            <p>
+              Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing
+              gravida odio porttitor sem non mi integer non faucibus.
+            </p>
+          </div>
+        </div>
+        <div class="card6 box">
+          <div class="card-inner">
+            <p><i class="fab fa-amazon"></i></p>
+            <h3>Accumsan viverra</h3>
+            <p>
+              Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing
+              gravida odio porttitor sem non mi integer non faucibus.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -119,30 +178,30 @@
           <ul>
             <li>
               <a href="">Dolor pulvinar sed etiam.</a>
-              <hr />
             </li>
+            <hr>
             <li>
               <a href="">Etiam vel lorem sed amet.</a>
-              <hr />
             </li>
+            <hr>
             <li>
               <a href="">Felis enim feugiat viverra.</a>
-              <hr />
             </li>
+            <hr>
             <li>
               <a href="">Dolor pulvinar magna etiam.</a>
-              <hr />
             </li>
+            <hr>
           </ul>
         </div>
 
         <div class="right-footer">
           <h3>Magna sed ipsum</h3>
           <ul>
-            <li>Twitter</li>
-            <li>Facebook</li>
-            <li>Instagram</li>
-            <li>Github</li>
+            <li><a href="">Twitter</a></li>
+            <li><a href="">Facebook</a></li>
+            <li><a href="">Instagram</a></li>
+            <li><a href="">Github</a></li>
           </ul>
         </div>
       </div>
