--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
         <div class="right-footer">
           <h3>Magna sed ipsum</h3>
           <ul>
-            <li><a href="">Twitter</a></li>
-            <li><a href="">Facebook</a></li>
-            <li><a href="">Instagram</a></li>
-            <li><a href="">Github</a></li>
+            <li><a href=""><i class="fab fa-twitter-square"></i> Twitter</a></li>
+            <li><a href=""><i class="fab fa-facebook-square"></i> Facebook</a></li>
+            <li><a href=""><i class="fab fa-instagram"></i> Instagram</a></li>
+            <li><a href=""><i class="fab fa-github-square"></i> Github</a></li>
           </ul>
         </div>
       </div>
