--- a/index.html
+++ b/index.html
@@ -150,9 +150,42 @@
         </p>
       </div>
       <div class="card-box">
-        <div class="card7 box"></div>
-        <div class="card8 box"></div>
-        <div class="card box"></div>
+        <div class="card7 box">
+          <img
+            src="recursos/emile-guillemot.jpg"
+            alt="Photo by Emile Guillemot on Unsplash"
+            class="photo-circle"
+          />
+          <h3 class="title-photo">Jane Doe CEO <span>- ABC Inc. </span></h3>
+          <p class="text-photo">
+            Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing
+            gravida odio porttitor sem non mi integer non faucibus.
+          </p>
+        </div>
+        <div class="card8 box">
+          <img
+            src="recursos/christopher-campbell.jpg"
+            alt="Photo by Christopher Campbell on Unsplash"
+            class="photo-circle"
+          />
+          <h3 class="title-photo">Jane Doe CEO <span> - ABC Inc.</span></h3>
+          <p class="text-photo">
+            Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing
+            gravida odio porttitor sem non mi integer non faucibus.
+          </p>
+        </div>
+        <div class="card box">
+          <img
+            src="recursos/dan.jpg"
+            alt="Photo by Dan on Unsplash"
+            class="photo-circle"
+          />
+          <h3 class="title-photo">Jane Doe CEO <span> - ABC Inc.</span></h3>
+          <p class="text-photo">
+            Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing
+            gravida odio porttitor sem non mi integer non faucibus.
+          </p>
+        </div>
       </div>
     </div>
 
@@ -179,29 +212,37 @@
             <li>
               <a href="">Dolor pulvinar sed etiam.</a>
             </li>
-            <hr>
+            <hr />
             <li>
               <a href="">Etiam vel lorem sed amet.</a>
             </li>
-            <hr>
+            <hr />
             <li>
               <a href="">Felis enim feugiat viverra.</a>
             </li>
-            <hr>
+            <hr />
             <li>
               <a href="">Dolor pulvinar magna etiam.</a>
             </li>
-            <hr>
+            <hr />
           </ul>
         </div>
 
         <div class="right-footer">
           <h3>Magna sed ipsum</h3>
           <ul>
-            <li><a href=""><i class="fab fa-twitter-square"></i> Twitter</a></li>
-            <li><a href=""><i class="fab fa-facebook-square"></i> Facebook</a></li>
-            <li><a href=""><i class="fab fa-instagram"></i> Instagram</a></li>
-            <li><a href=""><i class="fab fa-github-square"></i> Github</a></li>
+            <li>
+              <a href=""><i class="fab fa-twitter-square"></i> Twitter</a>
+            </li>
+            <li>
+              <a href=""><i class="fab fa-facebook-square"></i> Facebook</a>
+            </li>
+            <li>
+              <a href=""><i class="fab fa-instagram"></i> Instagram</a>
+            </li>
+            <li>
+              <a href=""><i class="fab fa-github-square"></i> Github</a>
+            </li>
           </ul>
         </div>
       </div>
